<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_icon"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/sort_by_name"
                android:title="@string/name"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_by_age"
                android:title="@string/age"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_by_breed"
                android:title="@string/surname"
                app:showAsAction="never" />

        </menu>


    </item>


</menu>